test_suite/tests/ui/fail/duplicated_attribute_arg/duplicated_arg.rs
use clapi::macros::*;

#[command]
#[arg(values)]
#[arg(values, min=1)]
fn echo(values: Vec<String>){}

fn main(){}