test_suite/tests/ui/fail/duplicated_attribute_arg/duplicated_arg.stderr
error: custom attribute panicked
 --> $DIR/duplicated_arg.rs:3:1
  |
3 | #[command]
  | ^^^^^^^^^^
  |
  = help: message: function argument `values` is already used in `#[arg(values)]`
